fixed scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 a {
   text-decoration: none;
 }
+body {
+  overflow: overlay;
+  overflow-x: hidden;
+}
